added css text styles

--- a/css/common.css
+++ b/css/common.css
@@ -11,3 +11,6 @@
 body {
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
+  font-family: roboto, sans-serif;
+  letter-spacing: 0.03em;
+}
