--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,3 @@
-/* колір основного тексту color: #212121 */
-/* колір контактів та параграфа color: #757575 */
-/* колір логотипу color: #2196F3; color: #000000; */
-/* колір логотипу внизу сторінки color: #2196F3; color: #FFFFFF;*/
-/* колір адреси color: #FFFFFF;*/
-/* колір контактів в підвалі color: rgba(255, 255, 255, 0.6);*/
-/* основний колір фону #FFFFFF; */
-/* колір фону півалу #2F303A; */
-
 :root {
   --primary-text-color: #212121;
   --paragraph-text-color: #757575;
@@ -77,6 +68,7 @@ body {
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
+  cursor: pointer;
 }
 .button:hover,
 .button:focus {
@@ -97,7 +89,6 @@ body {
 }
 .portfolio-paragraph {
   color: var(--paragraph-text-color);
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
 }
@@ -109,7 +100,7 @@ body {
 .footer-logo {
   color: var(--primary-white-color);
   text-decoration: none;
-  font-family: "Raleway";
+  font-family: raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
@@ -117,7 +108,6 @@ body {
 .address-hyperlink {
   color: var(--primary-white-color);
   text-decoration: none;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
   font-style: normal;
@@ -125,7 +115,6 @@ body {
 .address-link {
   color: var(--address-link);
   text-decoration: none;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
   font-style: normal;
