--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,13 @@
   --logo-color: #000000;
   --footer-backgroung-color: #2f303a;
   --address-link: rgba(255, 255, 255, 0.6);
+  --studio-background-color: #f5f4fa;
 }
-
 body {
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
   font-family: roboto, sans-serif;
+  font-size: 14px;
   letter-spacing: 0.03em;
 }
 .list {
@@ -34,7 +35,6 @@ body {
   color: var(--primary-text-color);
   text-decoration: none;
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
@@ -50,7 +50,6 @@ body {
   color: var(--paragraph-text-color);
   text-decoration: none;
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   font-style: normal;
@@ -58,6 +57,81 @@ body {
 .contacts .contacts-link:hover,
 .contacts .contacts-link:focus {
   color: var(--accent-color);
+}
+/* Studio */
+.title {
+  background-color: var(--footer-backgroung-color);
+  color: var(--primary-white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+.button-title {
+  background-color: var(--accent-color);
+  color: var(--primary-white-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+}
+.button-title:hover,
+.button-title:focus {
+  background-color: var(--primary-white-color);
+  color: var(--primary-text-color);
+}
+/* Features */
+.features-title {
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.features-paragraph {
+  color: var(--paragraph-text-color);
+  line-height: 1.71;
+}
+/* Works */
+.works-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
+/* Team */
+.team {
+  background-color: var(--studio-background-color);
+}
+.team-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+}
+.team-paragraph {
+  color: var(--paragraph-text-color);
+  font-size: 16px;
+  line-height: 1.18;
+}
+/* Portfolio */
+.primary-title {
+  visibility: hidden;
+}
+.portfolio-title {
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+.portfolio-paragraph {
+  color: var(--paragraph-text-color);
+  font-size: 16px;
+  line-height: 1.87;
 }
 /* Button */
 .button {
@@ -75,24 +149,6 @@ body {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
 }
-
-/* Portfolio */
-.primary-title {
-  display: none;
-}
-.portfolio-title {
-  color: var(--primary-text-color);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
-.portfolio-paragraph {
-  color: var(--paragraph-text-color);
-  font-size: 16px;
-  line-height: 1.87;
-}
-
 /* Footer */
 .footer {
   background-color: var(--footer-backgroung-color);
@@ -112,10 +168,17 @@ body {
   line-height: 1.7;
   font-style: normal;
 }
+.address-hyperlink:hover,
+.address-hyperlink:focus {
+  color: var(--accent-color);
+}
 .address-link {
   color: var(--address-link);
   text-decoration: none;
-  font-size: 14px;
   line-height: 1.7;
   font-style: normal;
+}
+.address-link:hover,
+.address-link:focus {
+  color: var(--accent-color);
 }
