--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ body {
   background-color: var(--footer-backgroung-color);
 }
 .title-header {
-  color: #ffffff;
+  color: var(--primary-white-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
